--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"packageManager": "npm@9.5.0",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 3003 --host",
 		"build": "vite build",
 		"preview": "vite preview  --port 3003 --host",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
