--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
 		"sbd": "^1.0.19",
 		"serpapi": "^1.1.1",
 		"sharp": "^0.33.4",
+		"svelte-routing": "^2.13.0",
 		"tailwind-scrollbar": "^3.0.0",
 		"tailwindcss": "^3.4.0",
 		"uuid": "^9.0.1",
