--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@xyflow/svelte": "^0.1.7",
 		"autoprefixer": "^10.4.14",
 		"browser-image-resizer": "^2.4.1",
+		"canvas": "^2.11.2",
 		"d3": "^7.9.0",
 		"dagre-d3": "^0.6.4",
 		"date-fns": "^2.29.3",
@@ -80,6 +81,7 @@
 		"jose": "^5.3.0",
 		"jsdom": "^22.0.0",
 		"json5": "^2.2.3",
+		"konva": "^9.3.15",
 		"marked": "^12.0.1",
 		"marked-katex-extension": "^5.0.1",
 		"mongodb": "^5.8.0",
@@ -96,6 +98,7 @@
 		"sbd": "^1.0.19",
 		"serpapi": "^1.1.1",
 		"sharp": "^0.33.4",
+		"svelte-konva": "^0.3.1",
 		"svelte-routing": "^2.13.0",
 		"tailwind-scrollbar": "^3.0.0",
 		"tailwindcss": "^3.4.0",
